2005-01-31 21:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeAt,gridCollapseEdge) only perform
	projection when gridCostConstraint contains gridCOST_CNST_VALID.

2005-01-31 17:10 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridProjectNode) Major refactoring to clean out
	gridSafeProjectNode. Now the face parameters are updated durring
	projection of edges.

2005-01-31 15:22 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.5 Release. ** internal release ** the
	-DSURFACE_VALIDITY path has been removed. om6 test case runs, but
	generates surface grid cliffs due to projection durring
	adaptation.

2005-01-31 14:10 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeAt) call
	queueResetCurrentTransaction if split aborted due to validity.
	* src/gridswap.c (gridRemoveTwoFaceCell,gridSwapEdge) call
	queueResetCurrentTransaction if swap aborted due to validity.

2005-01-31 13:44 Mike Park  <mike.park@nasa.gov>

	* src/queue.c (queueResetCurrentTransaction) added new method to
	cancel the current transaction. This new menthod is intented to be
	used when a primative operation undos an invalid
	configuration. This should speed up parallel ops and fix a bug
	resulting from faces floating around without nodes.

2005-01-31  9:42 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSortNodeGridEx) Fixed parallel memory bug that
	wrote to uninitialized pointer, This fixes an error reported by
	valgrind when an adaptation_surface_movie is produced.

2005-01-30 19:50 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) added in new faces to
	allow for validity checks durring two face cell removal.

2005-01-28 11:55 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) added in new faces to allow for
	validity checks durring swap combo evaluations.
	
2005-01-28 11:55 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdapt,gridCollapseEdge) moved the check